<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="@dimen/s_dp_320"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_radio"
            android:layout_width="@dimen/s_dp_16"
            android:layout_height="@dimen/s_dp_16"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/s_dp_24"
            android:src="@drawable/select_camera" />

        <TextView
            android:id="@+id/tv_camera_name"
            android:layout_width="@dimen/s_dp_166"
            android:layout_height="@dimen/s_dp_27"
            android:layout_marginStart="@dimen/s_dp_12"
            android:gravity="left"
            android:text="@string/new_net_camera"
            android:textColor="@color/black_FF131922"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tv_camera_type"
            android:layout_width="@dimen/s_dp_20"
            android:layout_height="@dimen/s_dp_20" />

        <TextView
            android:id="@+id/tv_camera_name_status"
            android:layout_width="@dimen/s_dp_58"
            android:layout_height="@dimen/s_dp_28"
            android:layout_marginStart="@dimen/s_dp_8"
            android:layout_marginEnd="@dimen/s_dp_16"
            android:background="@drawable/shape_using"
            android:gravity="center"
            android:text="@string/using"
            android:textColor="@color/green_FF1E8E3E"
            android:textSize="@dimen/s_dp_14" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/item_slide"
        android:layout_width="@dimen/s_dp_136"
        android:layout_height="@dimen/s_dp_56">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue_FF0081FF">

            <Button
                android:id="@+id/btn_edit_cm"
                android:layout_width="@dimen/s_dp_68"
                android:layout_height="match_parent"
                android:background="@color/universal_transparent"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="@dimen/s_dp_18" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/universal_color_red_d93026">

            <Button
                android:id="@+id/btn_delete_cm"
                android:layout_width="@dimen/s_dp_68"
                android:layout_height="match_parent"
                android:background="@color/universal_transparent"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="@dimen/s_dp_18" />
        </FrameLayout>
    </FrameLayout>

</LinearLayout>