<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/s_dp_360"
        android:layout_height="@dimen/s_dp_159"
        app:cardCornerRadius="@dimen/s_dp_8"
        app:cardElevation="@dimen/s_dp_10"
        app:cardMaxElevation="@dimen/s_dp_12"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_warn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s_dp_24"
                android:layout_marginTop="@dimen/s_dp_16"
                android:src="@mipmap/ic_warn"
                android:textColor="@color/black_FF131922"
                android:textSize="@dimen/s_dp_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s_dp_12"
                android:text="@string/delete_camera"
                android:textColor="@color/black_FF131922"
                android:textSize="@dimen/s_dp_18"
                app:layout_constraintBottom_toBottomOf="@id/img_warn"
                app:layout_constraintStart_toEndOf="@id/img_warn"
                app:layout_constraintTop_toTopOf="@id/img_warn" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/s_dp_24"
                android:layout_height="@dimen/s_dp_24"
                android:layout_marginTop="@dimen/s_dp_18"
                android:layout_marginEnd="@dimen/s_dp_24"
                android:src="@mipmap/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_content_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s_dp_61"
                android:layout_marginTop="@dimen/s_dp_59"
                android:text="@string/confirm_delete_camera"
                android:textColor="@color/black_FF4B5F75"
                android:textSize="@dimen/s_dp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/s_dp_80"
                android:layout_height="@dimen/s_dp_32"
                android:layout_marginEnd="@dimen/s_dp_12"
                android:background="@drawable/shape_btn_white"
                android:text="@string/cancel"
                android:textColor="@color/white_FF6C869F"
                android:textSize="@dimen/s_dp_14"
                app:layout_constraintBottom_toBottomOf="@id/btn_delete"
                app:layout_constraintEnd_toStartOf="@id/btn_delete"
                app:layout_constraintTop_toTopOf="@id/btn_delete" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_delete"
                android:layout_width="@dimen/s_dp_80"
                android:layout_height="@dimen/s_dp_32"
                android:layout_marginEnd="@dimen/s_dp_24"
                android:layout_marginBottom="@dimen/s_dp_24"
                android:background="@drawable/shape_btn_blue"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="@dimen/s_dp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>